--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -5,10 +5,10 @@ on:
         branches:
         - main
         - 'feature/*'
-env:
-    MONGO_URI: 'mongodb+srv://supercluster.d83jj.mongodb.net/superdata'
-    MONGO_USERNAME: ${{vars.MONGO_USERNAME}}
-    MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
+# env:
+#     MONGO_URI: 'mongodb+srv://supercluster.d83jj.mongodb.net/superdata'
+#     MONGO_USERNAME: ${{vars.MONGO_USERNAME}}
+#     MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
 jobs:
     unit-testing:
         name: Unit Testing
@@ -18,7 +18,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: Setup node js
-          uses: actions/setup-node@v4
+          uses: actions/setup-node@v3
           with:
             node-version: 18
 
