--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -35,18 +35,18 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Setup node js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
                 node-version: 18
     
-            - name: install dependecies
+            - name: install dependencies
               run: npm install
     
             - name: Unit Testing
               run: npm run coverage
 
             - name: Result
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                 name: Code-Coverage-Result
                 path: coverage
