--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -42,7 +42,8 @@ jobs:
             - name: install dependencies
               run: npm install
     
-            - name: Unit Testing
+            - name: Code coverage
+              continue-on-error: true
               run: npm run coverage
 
             - name: Result
