--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -30,7 +30,7 @@ jobs:
           id: node-test
           run: npm test
         - name: Result
-          if: steps.node-test.outcome =='failure' || steps.node-test.outcome == 'success'
+          if: failure() && steps.node-test.outcome =='failure' || steps.node-test.outcome == 'success'
           uses: actions/upload-artifact@v4
           with:
             name: Code-Coverage-Result
